[package]
name = "decaf377-rdsa"
edition = "2021"
version = "0.9.0"
authors = ["Penumbra Labs <team@penumbralabs.xyz>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "decaf377-rdsa is a randomizable signature scheme using the decaf377 group."
repository = "https://github.com/penumbra-zone/decaf377-rdsa"

[dependencies]
blake2b_simd = { version = "0.5", default-features = false }
byteorder = { version = "1.3", default-features = false }
decaf377 = { version = "0.6", default-features = false }
digest = "0.9"
rand_core = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { version = "1.0", optional = true }
ark-serialize = "0.4"
ark-ff = { version = "0.4", default-features = false }
hex = { version = "0.4", defualt-features = false }
no-std-compat = "0.4.1"

# Frost deps
# TODO: make optional ? use published versions?
[dev-dependencies]
bincode = "1"
criterion = "0.3"
lazy_static = "1.4"
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0"

[[bench]]
name = "bench"
harness = false

[features]
default = ["serde", "std", "alloc"]
std = [
    "ark-ff/std",
    "byteorder/std",
    "rand_core/std",
    "rand_core/std",
    "serde/std",
    "blake2b_simd/std",
    "no-std-compat/std",
    "thiserror",
]
alloc = []
parallel = ["ark-ff/parallel", "decaf377/parallel"]

[patch.crates-io]
decaf377 = { git = "https://github.com/Zondax/decaf377.git", branch = "fix/no_std" }
